[package]
name = "scryer"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
scry_sim = {path = "../scry_sim"}
scry_asm = {path = "../scry_asm"}
regex = "1.6.0"
num-bigint = "0.4.3"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.1.3"
tempfile = "3.3.0"
paste = "1.0.9"
duplicate = "2.0.0"